# phone_book

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  redis.conf
phone_address_service/: __init__.py
phone_address_service/api/: __init__.py  app.py  middleware.py
phone_address_service/config/: logging.py  settings.py
phone_address_service/models/: __init__.py  schemas.py
phone_address_service/repositories/: __init__.py  base.py  connection.py  redis_repository.py
phone_address_service/services/: __init__.py  phone_address_service.py
tests/: __init__.py  test_api.py  test_integration_docker.py  test_logging.py  test_models.py  test_project_structure.py  test_repositories.py  test_service.py
